force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/cgcloud__Order_Item_Inventory_Transaction__c.object-meta.xml
<CustomObject>
    <description>Holds the association details for the order item template, inventory control template and inventory transaction template.</description>
    <label>Order Item Inventory Transaction</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Order Item Inventory Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Item Inventory Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>