force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/fields/cgcloud__Inventory_Control_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Inventory_Control_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Inventory Control Template Id.</description>
    <label>Inventory Control Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Inventory_Control_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Inventory_Control_Template__c</referenceTo>
    <relationshipLabel>Order Item Inventory Transactions</relationshipLabel>
    <relationshipName>Order_Item_Inventory_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>