force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/fields/cgcloud__Order_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Item_Template__c</fullName>
    <description>Reference to the Order Item Template Id.</description>
    <label>Order Item Template</label>
    <referenceTo>cgcloud__Order_Item_Template__c</referenceTo>
    <relationshipLabel>Order Item Inventory Transactions</relationshipLabel>
    <relationshipName>Order_Item_Inventory_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>