force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/fields/cgcloud__Unique_Field_Display__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Field_Display__c</fullName>
    <description>Technical field to check that only one active record can have used for display as ‘Yes’ Consists of :  - Order_Item_Template.Id  - Active (&apos;True&apos;,&apos;False&apos;)  - User_For_Display (&apos;True&apos;,&apos;False&apos;)</description>
    <label>Unique Field Display</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>