force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/fields/cgcloud__Unique_Inventory_Templates__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Unique_Inventory_Templates__c</fullName>
    <description>Technical field to check uniqueness for combination of order template, inventory control template and inventory transaction template. -Inventory_Control_Template.Id  -Inventory_Transaction_Template.Id</description>
    <label>Unique Inventory Templates</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>