force-app/main/default/objects/cgcloud__Order_Item_Inventory_Transaction__c/fields/cgcloud__Used_For_Display__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Used_For_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies the inventory template that is relevant for the display of the current inventory balances in the disposal list.</description>
    <label>Used For Display</label>
    <type>Checkbox</type>
</CustomField>